--- a/css/mimlo.css
+++ b/css/mimlo.css
@@ -48,7 +48,8 @@ h1 {
  * 2. Show the overflow in Edge and IE.
  */
 hr {
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -85,7 +86,8 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  text-decoration: underline dotted;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -191,9 +193,9 @@ select {
  * Correct the inability to style clickable types in iOS and Safari.
  */
 button,
-[type=button],
-[type=reset],
-[type=submit] {
+[type="button"],
+[type="reset"],
+[type="submit"] {
   -webkit-appearance: button;
 }
 
@@ -201,9 +203,9 @@ button,
  * Remove the inner border and padding in Firefox.
  */
 button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -212,9 +214,9 @@ button::-moz-focus-inner,
  * Restore the focus styles unset by the previous rule.
  */
 button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -232,7 +234,8 @@ fieldset {
  *    `fieldset` elements in all browsers.
  */
 legend {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   color: inherit;
   /* 2 */
@@ -264,9 +267,10 @@ textarea {
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-[type=checkbox],
-[type=radio] {
-  box-sizing: border-box;
+[type="checkbox"],
+[type="radio"] {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */
@@ -275,8 +279,8 @@ textarea {
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -284,7 +288,7 @@ textarea {
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
-[type=search] {
+[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -294,7 +298,7 @@ textarea {
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-[type=search]::-webkit-search-decoration {
+[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -348,40 +352,51 @@ template {
 .container {
   max-width: 1024px;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .col-1 {
-  flex-basis: 8.333%;
+  -ms-flex-preferred-size: 8.333%;
+      flex-basis: 8.333%;
 }
 
 .col-2 {
-  flex-basis: 16.66%;
+  -ms-flex-preferred-size: 16.66%;
+      flex-basis: 16.66%;
 }
 
 .col-3 {
-  flex-basis: 25%;
+  -ms-flex-preferred-size: 25%;
+      flex-basis: 25%;
 }
 
 .col-4 {
-  flex-basis: 33.33%;
+  -ms-flex-preferred-size: 33.33%;
+      flex-basis: 33.33%;
 }
 
 .col-6 {
-  flex-basis: 50%;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
 }
 
 .col-8 {
-  flex-basis: 66.66%;
+  -ms-flex-preferred-size: 66.66%;
+      flex-basis: 66.66%;
 }
 
 .col-10 {
-  flex-basis: 83.33%;
+  -ms-flex-preferred-size: 83.33%;
+      flex-basis: 83.33%;
 }
 
 .col-12 {
-  flex-basis: 100%;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -389,43 +404,54 @@ template {
     max-width: 768px;
   }
 }
+
 @media only screen and (max-width: 768px) {
   .container {
     max-width: 640px;
   }
-
   .col-md-12 {
-    flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
   }
 }
+
 @media only screen and (max-width: 640px) {
   .container {
     padding: 0 15px;
   }
-
   .col-sm-12 {
-    flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
   }
 }
+
 .header {
   width: 100%;
   height: 80px;
   margin-bottom: 95px;
   background-color: #eeeeee;
 }
+
 .header .header-container {
   height: 100%;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 .header .header-container .header-title {
   text-decoration: none;
   color: #1f1f1f;
   font-size: 25px;
 }
+
 .header .header-container .header-nav {
   margin-left: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 .header .header-container .header-nav .header-nav-item {
   display: inline-block;
   width: auto;
@@ -435,32 +461,46 @@ template {
   text-decoration: none;
   font-size: 20px;
 }
+
 .header .header-container .header-mobile-nav {
   display: none;
   margin-left: auto;
 }
+
 .header .header-container .header-mobile-nav .header-mobile-nav-button {
   display: none;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 20px;
   font-weight: lighter;
   color: #1f1f1f;
 }
+
 .header .header-container .header-mobile-nav .header-mobile-nav-button img {
   margin-right: 5px;
 }
+
 .header .header-container .header-mobile-nav .mobile-nav {
   position: absolute;
   display: none;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100%;
   height: 100vh;
   left: 0;
   top: 80px;
   background-color: #eeeeee;
 }
+
 .header .header-container .header-mobile-nav .mobile-nav .mobile-nav-item {
   display: inline-block;
   width: auto;
@@ -478,9 +518,12 @@ template {
     display: block;
   }
   .header .header-container .header-mobile-nav .header-mobile-nav-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
 }
+
 .main .main-title {
   margin: 0;
   margin-bottom: 25px;
@@ -488,18 +531,27 @@ template {
   font-weight: normal;
   color: #1f1f1f;
 }
+
 .main .main-description {
   margin: 0;
   font-weight: lighter;
   font-size: 20px;
   color: #1f1f1f;
 }
+
 .main .social-icons {
   margin-left: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
 }
+
 .main .social-icons a {
   display: inline-block;
   width: auto;
@@ -507,55 +559,86 @@ template {
 }
 
 .posts {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-top: 80px;
 }
+
 .posts .post {
   margin-bottom: 40px;
-  flex-basis: calc(50% - 20px);
+  -ms-flex-preferred-size: calc(50% - 20px);
+      flex-basis: calc(50% - 20px);
 }
+
 .posts .post.long {
-  flex-basis: 100%;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
 }
+
 .posts .post .post-image {
   width: 100%;
   height: 300px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
+
 .posts .post .post-details {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-top: 18px;
 }
+
 .posts .post .post-details .post-author {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-weight: lighter;
   color: #1f1f1f;
 }
+
 .posts .post .post-details .post-author img {
   margin-right: 5px;
 }
+
 .posts .post .post-details .post-date {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-left: 38px;
   font-weight: lighter;
   color: #1f1f1f;
 }
+
 .posts .post .post-details .post-date img {
   margin-right: 5px;
 }
+
 .posts .post .post-title {
   font-weight: normal;
   font-size: 25px;
 }
+
 .posts .post .post-title a {
   text-decoration: none;
   color: #1f1f1f;
 }
+
 .posts .post .post-title a:hover {
   color: #3046c5;
 }
@@ -565,43 +648,170 @@ template {
     height: 250px;
   }
 }
+
 @media only screen and (max-width: 768px) {
   .main .social-icons {
     margin: auto;
     margin-top: 25px;
   }
-
   .posts .post .post-image {
     height: 200px;
   }
 }
+
 @media only screen and (max-width: 640px) {
   .posts .post {
-    flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
   }
   .posts .post .post-image {
     height: 200px;
   }
 }
+
 .footer {
   height: 160px;
   background-color: #eeeeee;
 }
+
 .footer .footer-container {
   height: 100%;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 .footer .footer-copyright {
   font-weight: lighter;
   color: #1f1f1f;
 }
+
 .footer .footer-copyright a {
   text-decoration: none;
   font-weight: normal;
   color: #1f1f1f;
 }
+
 .footer .footer-copyright a:hover {
   color: #3046c5;
 }
 
-/*# sourceMappingURL=/mimlo.dc0b737f.css.map */
+.page-head {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.page-title {
+  font-size: 60px;
+  font-weight: normal;
+  color: #1f1f1f;
+}
+
+.page-details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.page-details .page-author {
+  margin-right: 20px;
+  font-weight: lighter;
+  color: #1f1f1f;
+}
+
+.page-details .page-author img {
+  margin-right: 3px;
+}
+
+.page-details .page-date {
+  font-weight: lighter;
+  color: #1f1f1f;
+}
+
+.page-details .page-date img {
+  margin-right: 3px;
+}
+
+.page-head-divider {
+  width: 150px;
+  height: 4px;
+  background-color: #1f1f1f;
+  margin: 50px auto;
+}
+
+.page-content {
+  margin-bottom: 50px;
+}
+
+.page-content h1,
+.page-content h2,
+.page-content h3,
+.page-content h4,
+.page-content h5,
+.page-content h6 {
+  margin: 25px 0;
+  font-weight: normal;
+  color: #1f1f1f;
+}
+
+.page-content h1 {
+  font-size: 40px;
+}
+
+.page-content h2 {
+  font-size: 35px;
+}
+
+.page-content h3 {
+  font-size: 30px;
+}
+
+.page-content h4 {
+  font-size: 25px;
+}
+
+.page-content h5 {
+  font-size: 22px;
+}
+
+.page-content h6 {
+  font-size: 18px;
+}
+
+.page-content p {
+  margin: 20px 0;
+  font-size: 20px;
+  font-weight: lighter;
+  line-height: 30px;
+  color: #1f1f1f;
+}
+
+.page-content img {
+  width: 100%;
+  margin: 20px 0;
+}
+
+@media only screen and (max-width: 768px) {
+  .page-title {
+    font-size: 40px;
+  }
+  .page-content p {
+    font-size: 18px;
+    line-height: 26px;
+  }
+}
+/*# sourceMappingURL=mimlo.css.map */
